@@ -202,7 +202,7 @@ public class AlterTableStatement extends SchemaAlteringStatement
 
                     // After #8099, not safe to re-add columns of incompatible types - until *maybe* deser logic with dropped
                     // columns is pushed deeper down the line. The latter would still be problematic in cases of schema races.
-                    if (!type.isValueCompatibleWith(droppedColumn.type))
+                    if (!type.isSerializationCompatibleWith(droppedColumn.type))
                     {
                         String message =
                             String.format("Cannot re-add previously dropped column '%s' of type %s, incompatible with previous type %s",
